# Coding

./: .gitignore  build.gradle  input.txt  settings.gradle
Angular/: README.md
AutoMake/: .gitignore  commands.txt
AutoMake/CPP/: .gitignore  Makefile.am  ToDo.md  clean.sh  configure.ac  configure~ 2
Bazel/: ToDo.md  cscope.out
Bazel/Docs/: CPP.md  GoogleTest.md  Java.md  Link.md
Bazel/HelloWorld/: .gitignore  bazel-HelloWorld  bazel-bin  bazel-out  bazel-testlogs
C/: README.md
C/FileIO/: .asyncAPI.h.swp  1  FileRead.c  FileRead_temp.c  FileWrite.c  Makefile  asyncAPI.h  asyncIo.c  asyncIo.h  asyncio  debug.h  debug_temp.h  debug_test.c  err.txt  read.c  read.h  read_temp.c  readfileviafd.c  samplepoll.c  sampleselect.c  testAsync.c  write.c  write.h  writeFile
C/IO/: a.out  compilescript.sh  create  create.c  createls  urandom.txt
C/Proc/: testevent.c
C/Signals/: letdosignalagain  letparentkillme  letscatchsignal  letsdomyself  signal1.c  signal2.c  signalipc 2.c  signaltome.c
C/Study/: SystemProg.txt  apue.c  apue.h  deadline_sched.txt  file.txt  myls.c  shmclient.c  shmserver.c  test.c
C/Temp/: 1  macro.c  var_macros 2.c  var_macros1.c
C/Threads/: .driver.h.swp  .generate_data.c.swp  1  Makefile  a.out  alarmThread  alarm_cond 2.c  alarm_mutex.c  backoff 2  backoff.c  cond 2  cond.c  driver.h  externalSorting.c  generate_data.c  pipe 2.c  sorting.c  thread1.c
CMake/: Commands.txt  cscope.out
CMake/CPP/: .gitignore  ToDo.md  autogen.sh  command.txt
CMake/CPP/src/: CMakeLists.txt  Makefile.am
CMake/CPP/src/DP/: CMakeLists.txt  CoinDenominationsTest.cpp  LCS.h  LCSTest.cpp  MaxIncreasingSubsequence.h  MaxSubSequenceNonAdjacent.h  Topics.txt
CMake/CPP/src/Level11/: CMakeLists.txt  Codes.md
CMake/CPP/src/Level12/: CMakeLists.txt
CMake/CPP/src/Tree/: BST.cpp  BST.h  BSTTest.h  BinaryTree.cpp  BinaryTree.h  BranchSumTest.cpp  CMakeLists.txt  Diameter.h  FindClosestValue.h  InvertBinaryTreeTest.cpp  ReconstructBST.h  ReconstructBstTest.cpp  SameBSTs.h  SameBSTsTest.cpp  SymmetricalTreeTest.cpp  ValidateBSTTest.cpp  main.cpp  testBST.h  validateBST.h
CPP/: .gitignore  Build.md  CMakelists.txt  WORKSPACE
CPP/docs/: CMakelists.txt
CPP/src/: Cmakelists.txt
CPP/tests/: BUILD  CMakelists.txt  Test.md  counter_test.cc  greetings_test.cc  hello_test.cc  queue_test.cc
Codes/: cscope.out
Codes/CPP/: .gitignore  CMakeLists.txt  configure.ac
Codes/CPP/DsAndAlgo/src/main/cpp/DP/: CMakeLists.txt  LCSTest.cpp  Makefile.am  MaxIncreasingSubsequenceTest.cpp  MaxSubSequenceNonAdjacentTest.cpp  MaxWaterAreaTest.cpp  MinCoinDenominationsTest.cpp
Codes/CPP/src/DP/: BUILD  CMakeLists.txt  LD.h  LDNotCorrect.h  LDTest.cpp  Makefile.am  MaxIncreasingSubsequence.h  MaxSubSequenceNonAdjacent.h  MaxSubSequenceNonAdjacentTest.cpp  MaxWaterArea.h  MaxWaterAreaTest.cpp  MinNumberOfJumps.h  MinNumberOfJumpsTest.cpp  NumberOfWaysToTraverseTest.cpp
Collections/: cscope.out
DsAndAlgo/: cscope.out
DsAndAlgo/CPP/: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  Makefile.am  README.md  ToDo.md  autogen.sh  cacerts  cleanUp.sh  command.txt  configure.ac  cscope.out  vcpkg.json
DsAndAlgo/CPP/.devcontainer/: Dockerfile  devcontainer.json
DsAndAlgo/CPP/docs/: Links.md
DsAndAlgo/CPP/include/: CMakeLists.txt
DsAndAlgo/CPP/include/practice/: ListNode.h  ListUtils.h  MaximumProduct.h  PrintTree.h  TreeNode.h  TreeUtils.h
DsAndAlgo/CPP/src/: CMakeLists.txt  CMakeListsCopy.txt  Makefile.am  main.cpp
DsAndAlgo/CPP/src/DP/: CMakeLists.txt  CoinDenominations.h  CountSubsetSum.h  Knapsack.h  KnapsackTest  KnapsackTest.cpp  LCS.h  LD.h  Makefile.am  MaxIncreasingSubsequence.h  MaxIncreasingSubsequenceTest.cpp  MaxSubSequenceNonAdjacent.h  MaxWaterArea.h  MinNumberOfJumps.h  NumberOfWaysToTraverse.h  PartitionArray.h  SubsetSum.h  SubsetSumTest.cpp  TargetSum.h  TargetSumTest.cpp  build.Bazel  main.cpp  max_non_adjacent_sum.h
DsAndAlgo/CPP/src/Patterns/: CMakeLists.txt  SlidingWindow.h  main.cpp
DsAndAlgo/CPP/src/Patterns/TwoPointer/: TwoPointers.h
DsAndAlgo/CPP/src/Practice/: CMakeLists.txt  LinkedListInBinaryTree.h  MaximumProduct.cpp  PrintTree.h  main.cpp
DsAndAlgo/CPP/src/Tree/: CMakeLists.txt  KthLargestValueInBSTTest.cpp  Makefile.am  ReconstructBST.h  ReconstructBstTest.cpp  SameBSTs.h  ValidateBST.h
DsAndAlgo/CPP/src/dynamic_programming/: CMakeLists.txt  coins_change.cc  coins_change.h
DsAndAlgo/CPP/test/: CMakeLists.txt
DsAndAlgo/CPP/test/Practice/: LinkedListInBinaryTreeTest.cpp  MaximumProductTests.cpp  PrintTreeTest.cpp  PrintTreeTest.h  SlidingWindow.cpp  TwoPointerTest.cpp
DsAndAlgo/CPP/test/dynamic_programming/: CMakeLists.txt  coins_change_test.cc
DsAndAlgo/CPP/test/practice/: MaximumProductTests.cpp
DsAndAlgo/GoLang/: GoLang  go.mod
DsAndAlgo/Python/: README.md
DsAndAlgo/Python/DS/Sorting/: BUILD.bazel  heap_sort.py
DsAndAlgo/Python/src/DS/: BUILD.bazel  practice.py  settings.py
DsAndAlgo/Python/src/DS/List/: linked_list.py
DsAndAlgo/Python/src/DS/Sorting/: counting_sort.py  merge_sort.py  quick_sort.py
DsAndAlgo/Python/src/DS/Util/: BUILD.bazel  file_generator.py
DsAndAlgo/Python/src/DS/data/: CsortInput.txt  HsortOutput.txt  MsortInput.txt  MsortOutput.txt  QsortOutput.txt
DsAndAlgo/Python/src/DS/tests/: list_test.py  sorting_test.py
FileWatacher/: cscope.out
GoLang/: README.md  go.work
GoLang/learning/: WORKSPACE  go.mod
GoLang/learning/cmd/: BUILD.bazel
Gradle/CPP/: settings 2.gradle1
Java/Coding/: .gitignore  BUILD.bazel  bazel-Coding  build.gradle
Java/Coding/src/main/java/org/example/: Main.java  MyUnit.java
Java/Coding/src/test/java/org/example/: MyUnitTest.java
Java/CoreJava/:  flush.txt  (+3 more)
POC/CPP/DsAndAlgo/src/main/cpp/Tree/: BinaryTree.cpp  BinaryTreeTest.cpp  BranchSumTest.cpp  CMakeLists.txt  MinHeightBSTTest.cpp  SameBSTsTest.cpp  ValidateBSTTest.cpp
Projects/: README.md
Python/: .health 2.conf.icloud  README.md
Rust/: Cargo.toml  README.md  WORKSPACE
libs/jsoncpp/: CMakeLists.txt  WORKSPACE  hello_world.cc
libs/jsoncpp/src/: BUILD  CMakeLists.txt  test.json  test_json.cc
(+762 files in other folders)
