add_executable (DPMain 
                main.cpp)

add_executable(DPMaxSubSequenceSumNonAdjacent
               MaxSubSequenceNonAdjacent.h 
               MaxSubSequenceNonAdjacentTest.cpp)

add_executable(CoinDenominations
               CoinDenominations.h 
               CoinDenominationsTest.cpp)
               