bin_PROGRAMS = TreeMain treeTest BST BinaryTree FindClosestValue ValidateBST MinHeightBST KthLargestValue ReconstructBST SameBST BranchSum NodeDepth InvertBinaryTree BinaryTreeDiamter Successor MergeBinaryTree SymmetricalBinaryTree 

TreeMain_SOURCES = main.cpp

treeTest_SOURCES = debug.h main.cpp BSTTest.h BST.h BST.cpp 

BST_SOURCES = main.cpp BSTTest.h BST.h BST.cpp

BinaryTree_SOURCES = BinaryTree.h BinaryTree.cpp BinaryTreeTest.cpp

FindClosestValue_SOURCES = BST.h BST.cpp FindClosestValue.h FindClosestValueTest.cpp

ValidateBST_SOURCES =  BST.h BST.cpp ValidateBST.h ValidateBSTTest.cpp

MinHeightBST_SOURCES = MinHeightBST.h MinHeightBSTTest.cpp

KthLargestValue_SOURCES = BST.h BST.cpp KthLargestValueInBST.h KthLargestValueInBSTTest.cpp

ReconstructBST_SOURCES = BST.h BST.cpp ReconstructBST.h  ReconstructBSTTest.cpp

SameBST_SOURCES =  BST.h BST.cpp SameBSTs.h SameBSTsTest.cpp

BranchSum_SOURCES = BST.h BST.cpp BranchSum.h BranchSumTest.cpp

NodeDepth_SOURCES =  BST.h BST.cpp NodeDepth.h NodeDepthTest.cpp

InvertBinaryTree_SOURCES =  BinaryTree.h BinaryTree.cpp InvertBinaryTree.h InvertBinaryTreeTest.cpp 

BinaryTreeDiamter_SOURCES =   BinaryTree.h BinaryTree.cpp Diameter.h DiameterTest.cpp 

Successor_SOURCES = BinaryTree.h BinaryTree.cpp FindSuccessor.h FindSuccessorTest.cpp 

MergeBinaryTree_SOURCES = BinaryTree.h BinaryTree.cpp MergeBinaryTree.h MergeBinaryTreeTest.cpp 

SymmetricalBinaryTree_SOURCES = BinaryTree.h BinaryTree.cpp SymmetricalTree.h SymmetricalTreeTest.cpp